--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -23,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
+    "date-fns": "^3.0.6",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.16",
     "kbr-validator": "^0.0.13",
@@ -34,6 +36,7 @@
     "nodemailer-juice": "^1.0.1",
     "react": "^18",
     "react-cookie": "^6.1.1",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-toastify": "^9.1.3",
