pm2 관련 추가, 세부 수정

--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
+    "deploy:local": "next build && pm2 startOrRestart ecosystem.config.js --env local",
+    "deploy:dev": "next build && pm2 startOrRestart ecosystem.config.js --env dev",
+    "deploy:prod": "next build && pm2 startOrRestart ecosystem.config.js --env prod",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
