테스트, 프러덕션 환경 분리 작업, 토스 정보 조회 api 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,12 @@
       "@/lib/*": ["./src/lib/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/configs/.config.ts"
+  ],
   "exclude": ["node_modules"]
 }
