--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -44,6 +44,7 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.0",
     "tailwind-merge": "^2.1.0",
@@ -66,7 +67,7 @@
     "postcss": "^8",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "prisma": "^5.6.0",
+    "prisma": "^5.7.1",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
