--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^18",
     "react-cookie": "^6.1.1",
     "react-day-picker": "^8.10.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-to-print": "^2.14.15",
