--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.0",
+    "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "use-resize-observer": "^9.1.0",
