--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install
-      - run: npm install node-sass@6.0.1
+      - run: npm install sass node-sass
       - run: npm run build
       # - run: npm test
