--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,6 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
-      - run: npm install sass node-sass
-      - run: npm run build
-      # - run: npm test
+      - run: npm i -g pnpm
+      - run: pnpm install
+      - run: pnpm build
