--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,7 +25,7 @@ jobs:
       # - run: pnpm build
 
       - name: SSH and NPM Install
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.2
         with:
           host: ${{ secrets.CLICK_SSH_HOST }}
           username: ${{ secrets.CLICK_SSH_USERNAME }}
