--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,19 +24,19 @@ jobs:
       # - run: pnpm install
       # - run: pnpm build
 
-      - name: Debug SSH Secrets
-        run: |
-          echo "Host: ${{ secrets.SSH_HOST }}"
-          echo "Username: ${{ secrets.SSH_USERNAME }}"
-          echo "Port: ${{ secrets.SSH_PORT }}"
+      # - name: Debug SSH Secrets
+      #   run: |
+      #     echo "Host: ${{ secrets.SSH_HOST }}"
+      #     echo "Username: ${{ secrets.SSH_USERNAME }}"
+      #     echo "Port: ${{ secrets.SSH_PORT }}"
 
       - name: SSH and NPM Install
         uses: appleboy/ssh-action@v1.0.2
         with:
-          host: ${{ secrets.CLICK_SSH_HOST }}
-          username: ${{ secrets.CLICK_SSH_USERNAME }}
-          key: ${{ secrets.CLICK_SSH_PRIVATE_KEY }}
-          port: ${{ secrets.CLICK_SSH_PORT }}
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
           script: |
             cd C:\\click-store
             echo print("abc") > test.txt
