--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,9 @@ jobs:
         uses: fifsky/ssh-action@master
         with:
           command: |
-            whoami
+            cd c:\\
+            echo "test test test"
+            exit 1
           host: ${{ secrets.SSH_HOST }}
           user: ${{ secrets.SSH_USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY}}
