--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         node-version: [20.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3.3.0
       - name: Node.js ${{ matrix.node-version }} -- npm install
         uses: actions/setup-node@v2
         with:
@@ -31,18 +31,16 @@ jobs:
       #     echo "Username: ${{ secrets.SSH_USERNAME }}"
       #     echo "Port: ${{ secrets.SSH_PORT }}"
 
-      - name: ls -a via OPEN SSH Private Key
-        uses: fifsky/ssh-action@master
+      - name: execute remote ssh & deploy backend server
+        uses: appleboy/ssh-action@master
         with:
-          command: |
-            cd c:\\
-            echo "test test test"
-            exit 1
           host: ${{ secrets.SSH_HOST }}
-          user: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY}}
-          pass: ${{ secrets.SSH_PASSPHRASE }}
-          args: "-tt -vvv"
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          port: ${{ secrets.SSH_PORT }}
+          script: |
+            whoami
 
       # - name: SSH and NPM Install
       #   uses: appleboy/ssh-action@v0.1.7
