--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,16 +31,16 @@ jobs:
       #     echo "Username: ${{ secrets.SSH_USERNAME }}"
       #     echo "Port: ${{ secrets.SSH_PORT }}"
 
-      - name: execute remote ssh & deploy backend server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          port: ${{ secrets.SSH_PORT }}
-          script: |
-            whoami
+      # - name: execute remote ssh & deploy backend server
+      #   uses: appleboy/ssh-action@master
+      #   with:
+      #     host: ${{ secrets.SSH_HOST }}
+      #     username: ${{ secrets.SSH_USERNAME }}
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     passphrase: ${{ secrets.SSH_PASSPHRASE }}
+      #     port: ${{ secrets.SSH_PORT }}
+      #     script: |
+      #       whoami
 
       # - name: SSH and NPM Install
       #   uses: appleboy/ssh-action@v0.1.7
@@ -51,3 +51,11 @@ jobs:
       #     port: ${{ secrets.SSH_PORT }}
       #     passphrase: ${{ secrets.SSH_PASSPHRASE }}
       #     script: whoami
+      - name: whoami via ssh
+        uses: garygrossgarten/github-action-ssh@release
+        with:
+          command: whoami
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          privateKey: ${{ secrets.SSH_PRIVATE_KEY}}
