--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,20 +42,20 @@ jobs:
       #     script: |
       #       whoami
 
-      # - name: SSH and NPM Install
-      #   uses: appleboy/ssh-action@v0.1.4
-      #   with:
-      #     host: ${{ secrets.SSH_HOST }}
-      #     username: ${{ secrets.SSH_USERNAME }}
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     port: ${{ secrets.SSH_PORT }}
-      #     passphrase: ${{ secrets.SSH_PASSPHRASE }}
-      #     script: whoami
-      - name: whoami via ssh
-        uses: garygrossgarten/github-action-ssh@release
+      - name: SSH and NPM Install
+        uses: appleboy/ssh-action@v0.1.4
         with:
-          command: whoami
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          privateKey: ${{ secrets.SSH_PRIVATE_KEY}}
+          script: whoami
+      # - name: whoami via ssh
+      #   uses: garygrossgarten/github-action-ssh@release
+      #   with:
+      #     command: whoami
+      #     host: ${{ secrets.SSH_HOST }}
+      #     username: ${{ secrets.SSH_USERNAME }}
+      #     passphrase: ${{ secrets.SSH_PASSPHRASE }}
+      #     privateKey: ${{ secrets.SSH_PRIVATE_KEY}}
