--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            echo aaa &
-            echo bbb &
-            cd c:\click-store &
-            dir
+            cd c:\click-store\next-test-click-store & git pull & pnpm install & pnpm deploy:prod
