--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: CLICK-STORE CD
 
 on:
   push:
@@ -10,9 +10,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [20.x]
 
     steps:
       # - uses: actions/checkout@v3.3.0
@@ -21,7 +21,7 @@ jobs:
       #   with:
       #     node-version: ${{ matrix.node-version }}
 
-      - name: SSH and NPM Install
+      - name: SSH and Deploy
         uses: appleboy/ssh-action@v1.0.2
         with:
           host: ${{ secrets.SSH_HOST }}
