--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/bcrypt": "^5.0.2",
     "@types/classnames": "^2.3.1",
     "@types/node": "^20",
