deploy script 명령어 축소

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            cd c:\click-store\next-test-click-store & git pull & pnpm install & pnpm deploy:prod
+            cd c:\click-store\next-test-click-store & git pull & pnpm install & pnpm deploy
