--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start -p 3003",
+    "deploy": "next build && pm2 startOrRestart ecosystem.config.js --env prod",
     "deploy:local": "next build && pm2 startOrRestart ecosystem.config.js --env local",
     "deploy:dev": "next build && pm2 startOrRestart ecosystem.config.js --env dev",
-    "deploy:prod": "next build && pm2 startOrRestart ecosystem.config.js --env prod",
     "lint": "next lint"
   },
   "dependencies": {
