--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start -p 3003",
+    "generate": "prisma generate",
     "deploy:prod": "next build && pm2 startOrRestart ecosystem.config.js --env prod",
     "deploy:local": "next build && pm2 startOrRestart ecosystem.config.js --env local",
     "deploy:dev": "next build && pm2 startOrRestart ecosystem.config.js --env dev",
