--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
     "sharp": "^0.33.0",
