--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           script: |
-            cd c:\click-store\next-test-click-store & git pull & pnpm install & pnpm deploy:dev
+            cd c:\web-release\click-store\click-store-test & git pull & pnpm install & pnpm deploy:dev
