--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^5.12.2",
+    "@tanstack/react-table": "^8.15.3",
     "@tosspayments/payment-widget-sdk": "^0.10.2",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
@@ -32,6 +33,7 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
     "dayjs": "^1.11.10",
+    "exceljs": "^4.4.0",
     "framer-motion": "^10.16.16",
     "kbr-validator": "^0.0.14",
     "lucide-react": "^0.295.0",
@@ -46,9 +48,11 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-lottie-player": "^2.0.0",
     "react-quill": "^2.0.0",
     "react-to-print": "^2.14.15",
     "react-toastify": "^9.1.3",
+    "sass": "^1.74.1",
     "sharp": "^0.33.0",
     "socket.io-client": "^4.7.2",
     "tailwind-merge": "^2.1.0",
