--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,19 +15,16 @@ jobs:
     #     node-version: [20.x]
 
     steps:
-      # - uses: actions/checkout@v3.3.0
-      # - name: Node.js ${{ matrix.node-version }} -- npm install
-      #   uses: actions/setup-node@v2
-      #   with:
-      #     node-version: ${{ matrix.node-version }}
-
-      - name: SSH and Deploy
-        uses: appleboy/ssh-action@v1.0.2
+      - name: Checkout
+        uses: actions/checkout@v3        
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT }}
-          passphrase: ${{ secrets.SSH_PASSPHRASE }}
-          script: |
-            cd c:\web-release\click-store\test-click-store & git pull & pnpm install & pnpm deploy:dev
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Build and push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: kaburi/click-store:latest, kaburi/click-store:${{ github.run_number }}         
