--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start -p 3003",
+    "start:prod": "next start",
     "generate": "prisma generate",
     "deploy:prod": "next build && pm2 startOrRestart ecosystem.prod.config.js --env prod",
     "deploy:dev": "next build && pm2 startOrRestart ecosystem.dev.config.js --env dev",
