--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,22 +3,14 @@ name: CLICK-STORE CD
 on:
   push:
     branches: [main]
-  # pull_request:
-  #   branches: [main]
-  # test
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    # strategy:
-    #   matrix:
-    #     node-version: [20.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
@@ -29,23 +21,29 @@ jobs:
           push: true
           tags: kaburi/click-store:latest, kaburi/click-store:${{ github.run_number }}
 
-      - name: Checkout click-helms repository
+      - name: Checkout ai-server-k8s-update repository
         uses: actions/checkout@v3
         with:
-          repository: KaburiCoder/click-helms
-          token: ${{ secrets.CLICK_HELMS_REPO_TOKEN }} # GitHub 토큰
-          path: .
-          ref: main # 기본 브랜치를 명시적으로 지정 (main이 기본 브랜치일 경우)
+          repository: clicksoft-ko/ai-server-k8s
+          token: ${{ secrets.K8S_UPDATE_TOKEN }}
+          path: ai-server-k8s
+          ref: main
 
-      - name: Update YAML file
+      - name: Install yq (fast)
         run: |
-          sed -i '/client:/,/service:/s/version: ".*"/version: "${{ github.run_number }}"/' click-store/values.yaml
-          sed -i '/testClient:/,/service:/s/version: ".*"/version: "${{ github.run_number }}"/' click-store/values.yaml
+          wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          chmod +x /usr/local/bin/yq
+
+      - name: Update image tag in values.yaml (yq)
+        run: |
+          yq -i '.client.image.version = "${{ github.run_number }}"' ai-server-k8s/projects/click-store/values.yaml
+          yq -i '.testClient.image.version = "${{ github.run_number }}"' ai-server-k8s/projects/click-store/values.yaml
 
       - name: Commit and push changes
         run: |
-          git config --global user.name "${{ secrets.USER_NAME }}"
-          git config --global user.email "${{ secrets.USER_EMAIL }}"
-          git add click-store/values.yaml
-          git commit -m "Update version to ${{ github.run_number }}"
+          git config --global user.name "ci-cd"
+          git config --global user.email "actions@github.com"
+          cd ai-server-k8s
+          git add projects/click-store/values.yaml
+          git commit -m "Update image tag to ${{ github.run_number }}"
           git push
